Fixed line wrap of lists

--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -70,9 +70,12 @@ img {
   animation: spin 2s linear infinite;
 }
 
-.security-info {
-  padding-inline-start: 0;
-  list-style-position: inside;
+ul, ol {
+  padding-left: 15px;
+}
+
+ol {
+  margin-bottom: 0px;
 }
 
 @keyframes spin {
